objects/CN_Demo_Report__c.object
<CustomObject>
    <fields>
        <fullName>CN_Activity_Type__c</fullName>
        <formula>TEXT(CN_Chef_Request__r.CN_Event_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Channel__c</fullName>
        <formula>CN_Chef_Request__r.RecordType.Name</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Chef_Request_RecordType__c</fullName>
        <formula>CN_Chef_Request__r.RecordType.DeveloperName</formula>
        <label>Chef Request RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Chef_Request__c</fullName>
        <label>Chef Request</label>
        <referenceTo>CN_Chef_Request__c</referenceTo>
        <relationshipLabel>Demo Reports</relationshipLabel>
        <relationshipName>Demo_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CN_City__c</fullName>
        <formula>CN_Chef_Request__r.CN_Account__r.CN_City_CN__r.Name + &quot; &quot; +  CN_Chef_Request__r.CN_Account__r.CN_City_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Creator_Name__c</fullName>
        <formula>CreatedBy.LastName + &quot; &quot; +  CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_ID__c</fullName>
        <formula>CN_Chef_Request__r.CN_Customer_ID__c</formula>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <formula>CN_Chef_Request__r.CN_Account__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Demo_Used_Products__c</fullName>
        <label>Demo Used Products</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Event_Theme__c</fullName>
        <formula>CN_Chef_Request__r.CN_Event_Theme__c</formula>
        <label>Event Theme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Guest_Chef__c</fullName>
        <formula>CN_Chef_Request__r.CN_Guest_Chef__c</formula>
        <label>Guest Chef</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_My_Demo_Report__c</fullName>
        <formula>CreatedById = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Demo Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Number_of_People__c</fullName>
        <label>Number of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Number_of_Recipes__c</fullName>
        <label>Number of Recipes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Concur_Travel_Cost__c</fullName>
        <label>SAP Concur Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Attendance__c</fullName>
        <label>Sales Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Name__c</fullName>
        <formula>CN_Chef_Request__r.Owner:User.LastName + &quot; &quot; +  CN_Chef_Request__r.Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Name</label>
        <type>Text</type>
    </fields>
    <label>Demo Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Chef_Request__c</columns>
        <columns>CN_Activity_Type__c</columns>
        <columns>CN_Number_of_People__c</columns>
        <columns>CN_Number_of_Recipes__c</columns>
        <columns>CN_Demo_Used_Products__c</columns>
        <columns>CN_Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CN_My_Demo_Report</fullName>
        <columns>NAME</columns>
        <columns>CN_Chef_Request__c</columns>
        <columns>CN_Activity_Type__c</columns>
        <columns>CN_Number_of_People__c</columns>
        <columns>CN_Number_of_Recipes__c</columns>
        <columns>CN_Demo_Used_Products__c</columns>
        <columns>CN_Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_My_Demo_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Demo Report</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{0000000000}</displayFormat>
        <label>Demo Report Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Reports</pluralLabel>
    <recordTypes>
        <fullName>CN_Demo_Report</fullName>
        <active>true</active>
        <label>CN Demo Report</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Check_Number_Of_People</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Number_of_People__c &lt;= 0
)</errorConditionFormula>
        <errorDisplayField>CN_Number_of_People__c</errorDisplayField>
        <errorMessage>Number of People must greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Number_Of_Recipes</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
IF( NOT(ISBLANK(CN_Number_of_Recipes__c )) ,CN_Number_of_Recipes__c &lt;= 0,False)
)</errorConditionFormula>
        <errorDisplayField>CN_Number_of_Recipes__c</errorDisplayField>
        <errorMessage>Number of Recipes must greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Number_Of_Recipes_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(IF($Profile.Name = &quot;CN Sales&quot; || $Profile.Name = &quot;CN Sales Lead&quot; ||$Profile.Name = &quot;CN Sales Manager&quot;, TRUE, FALSE)),
  ISBLANK(CN_Number_of_Recipes__c )
)</errorConditionFormula>
        <errorDisplayField>CN_Number_of_Recipes__c</errorDisplayField>
        <errorMessage>You must input Number of Recipes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Demo_Report_Only_Change_Self_Report</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CreatedById &lt;&gt;  $User.Id ,
 NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>Only creator could edit</errorMessage>
    </validationRules>
</CustomObject>